dev: remove unused variable

--- a/meson.build
+++ b/meson.build
@@ -41,7 +41,7 @@ dep = declare_dependency(
   link_with: lib,
   dependencies: dependencies)
 
-exe = executable(meson.project_name(),
+executable(meson.project_name(),
   sources: 'src/main.cpp',
   dependencies: dep,
   install: true)
