--- a/data/systemd/fragoi-udpnotify.service
+++ b/data/systemd/fragoi-udpnotify.service
@@ -1,12 +1,9 @@
 [Unit]
 Description=UDP Notify
 
-#Requisite=dbus.service
-#After=dbus.service
-
 [Service]
 Type=exec
 ExecStart=udpnotify
 
-#[Install]
-#WantedBy=graphical-session.target
+[Install]
+WantedBy=graphical-session.target
