dev: move udpserver test to manual on meson.build

--- a/meson.build
+++ b/meson.build
@@ -33,11 +33,11 @@ tests = {
   'arguments_test': 'test/arguments_test.cpp',
   'logger_test': 'test/logger_test.cpp',
   'protocol_test': 'test/protocol_test.cpp',
-  'udpserver_test': 'test/udpserver_test.cpp',
 }
 
 manual_tests = {
-  'notifications_test': 'test/manual/notifications_test.cpp'
+  'notifications_test': 'test/manual/notifications_test.cpp',
+  'udpserver_test': 'test/manual/udpserver_test.cpp',
 }
 
 lib = static_library(meson.project_name(),
